resources/generated-reference/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: "false"
    app.openshift.io/vcs-ref: master
    app.openshift.io/vcs-uri: https://github.com/chtime/via
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"via:latest","namespace":"time"},"fieldPath":"spec.template.spec.containers[?(@.name==\"via\")].image","paused":"false"}]'
    openshift.io/generated-by: OpenShiftWebConsole
  labels:
    app: via
    app.kubernetes.io/component: via
    app.kubernetes.io/instance: via
    app.kubernetes.io/name: via
    app.kubernetes.io/part-of: via
  name: via
  namespace: time
spec:
  replicas: 1
  selector:
    matchLabels:
      app: via
  template:
    metadata:
      labels:
        app: via
        deployment: via
    spec:
      containers:
      - name: via
        image: image-registry.openshift-image-registry.svc:5000/time/via:latest
        imagePullPolicy: Always
